2014-09-10  Myles C. Maxfield  <mmaxfield@apple.com>

        Laying out a TextRun using an SVG font is O(n^2)
        https://bugs.webkit.org/show_bug.cgi?id=136584

        Reviewed by Darin Adler.

        Addressing post-commit review from Darin.

        No new tests.

        * platform/graphics/Font.h:
        (WebCore::Font::treatAsSpace): Un-inline.
        (WebCore::Font::treatAsZeroWidthSpace): Ditto.
        (WebCore::Font::treatAsZeroWidthSpaceInComplexScript): Ditto.
        * svg/SVGFontData.cpp:
        (WebCore::computeNormalizedSpaces): Avoid unnecessary copy.

2014-09-10  peavo@outlook.com  <peavo@outlook.com>

        [Curl] Optimization; avoid reallocating string many times.
        https://bugs.webkit.org/show_bug.cgi?id=136704

        Reviewed by Alex Christensen.

        Adding individual characters to a string is inefficient, the string will be reallocated each time.

        * platform/network/curl/CookieJarCurl.cpp:
        (WebCore::readCurlCookieToken):

2014-09-10  peavo@outlook.com  <peavo@outlook.com>

        [Curl] Compile error, CertificateInfo.h is not found.
        https://bugs.webkit.org/show_bug.cgi?id=136703

        Reviewed by Alex Christensen.

        Curl also needs to implement the CertificateInfo class.

        * platform/network/curl/CertificateInfo.h: Added.
        (WebCore::CertificateInfo::CertificateInfo):

2014-09-10  Simon Fraser  <simon.fraser@apple.com>

        Clean up some ENABLE(PICTURE_SIZES) stuff, don't change function signatures inside #ifdefs
        https://bugs.webkit.org/show_bug.cgi?id=136654

        Reviewed by Darin Adler.

        Adding parameters inside an #ifdef makes for unreadable code, so remove some
        #if ENABLE(PICTURE_SIZES) related to the preload scanner and always pass the arguments.
        Reduced the argument count on some functions by just passing a Document&. 
        
        Also fix a couple of uses of #if ENABLE_PICTURE_SIZES.

        * html/HTMLImageElement.h: